--- a/faq.html
+++ b/faq.html
@@ -30,7 +30,7 @@
     <!--safari-->
     <link rel="mask-icon" href="">
     <!--Android-->
-    <meta name="theme-color" content="#5787ff">
+    <meta name="theme-color" content="#3498db">
     <link rel="icon" type="image/png" href="./img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
@@ -40,14 +40,48 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>よくある質問</h1>
+    </header>
+    <main>
         <a href="./">トップページに戻る</a>
+        <h1>サイトに関して</h1>
+        <section>
+            <h2>このサイトは誰が運営しているの？</h2>
+            <p>水戸一高附属中学校2学年の有志で運営しています。</p>
+            <p>管理者はtalusです。</p>
+        </section>
         <section>
             <h2>このサイトって外部からアクセスできるの？</h2>
             <p>いいえ、Googleなどの検索結果に表示されることはありません。ただし、URLを知っている人は直接アクセスできるため、
                 URLを関係者以外に教えたり、SNSなどで共有したりしないでください。</p>
         </section>
+
+        <h1>掲示板や質問箱に関して</h1>
+        <section>
+            <h2>掲示板や質問箱でスパム、誹謗中傷、不適切な内容が投稿されました</h2>
+            <p>投稿は定期的に監視していますが、もし見つけた場合は速やかに削除しますので、管理者までご連絡ください。</p>
+        </section>
+        <section>
+            <h2>掲示板や質問箱で投稿した内容を削除したい</h2>
+            <p>投稿の削除は管理者までご連絡ください。</p>
+        </section>
+        <section>
+            <h2>掲示板や質問箱で投稿した内容を編集したい</h2>
+            <p>投稿の編集は管理者までご連絡ください。</p>
+        </section>
+        <section>
+            <h2>掲示板や質問箱で投稿した内容が反映されない</h2>
+            <p>投稿が反映されるまでに数分かかることがあります。しばらく待ってからページを再読み込みしてください。</p>
+        </section>
+        <section>
+            <h2>掲示板や質問箱で他の人の名前を使ってもいいですか？</h2>
+            <p>ダメです。自分のハンドルネーム、もしくは実名を使ってください。</p>
+            <p>他の人の名前を使ってトラブルが起きた場合は、自己責任となりますのでご注意ください。</p>
+            <p style="color: #FE483B;">特に、管理人である"talus"の名前を使ってのなりすましは絶対にやめてください。</p>
+        </section>
+
+        <h1>メニューに関して</h1>
         <section>
             <h2>メニューが開けません</h2>
             <p>ブラウザの設定や拡張機能が原因でメニューが正常に表示されないことがあります。以下の点を確認してください。</p>
@@ -58,17 +92,22 @@
             </ul>
         </section>
         <section>
-            <h2>掲示板や質問箱でスパム、誹謗中傷、不適切な内容が投稿されました</h2>
-            <p>投稿は定期的に監視していますが、もし見つけた場合は速やかに削除しますので、管理者までご連絡ください。</p>
-        </section>
-        <section>
             <h2>ホーム画面から動けない</h2>
             <p>右上のメニューアイコンをクリックすると、メニューが開きます。</p>
         </section>
+
+        <h1>その他</h1>
         <section>
             <h2>更新内容などを詳しく知りたい</h2>
-            <p><a href="https://github.com/talus-daise/mito1-website" target="_blank" rel="noopener noreferrer">https://github.com/talus-daise/mito1-website</a>を参照してください</p>
+            <p><a href="https://github.com/talus-daise/mito1-website/blob/main/README.md" target="_blank"
+                    rel="noopener noreferrer">README.md</a>を参照してください</p>
         </section>
+        <section>
+            <h2>ソースコードを見たい</h2>
+            <p>このサイトのソースコードは<a href="https://github.com/talus-daise/mito1-website" target="_blank"
+                    rel="noopener noreferrer">GitHub</a>で公開されています。</p>
+        </section>
+        <a href="./">トップページに戻る</a>
     </main>
 
     <script type="module" src="./notice/notice.js" defer></script>
