--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
     <!--safari-->
     <link rel="mask-icon" href="">
     <!--Android-->
-    <meta name="theme-color" content="#5787ff">
+    <meta name="theme-color" content="#3498db">
     <link rel="icon" type="image/png" href="./img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
     <script src="./script/customAlert.js"></script>
-    <!--マニフェスト-->
-    <link rel="manifest" href="manifest.json">
     <!--マニフェスト-->
     <link rel="manifest" href="manifest.json">
 </head>
