--- a/member_list/index.html
+++ b/member_list/index.html
@@ -30,7 +30,7 @@
     <!--safari-->
     <link rel="mask-icon" href="">
     <!--Android-->
-    <meta name="theme-color" content="#5787ff">
+    <meta name="theme-color" content="#3498db">
     <link rel="icon" type="image/png" href="../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
